--- a/Leccion2_modulo3_Pandas.ipynb
+++ b/Leccion2_modulo3_Pandas.ipynb
@@ -12,7 +12,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "La diferencia entre una serie y DataFrame es que mientras la serie es unidimensional, el dataframe es bidimensional. La serie similar a una lista, tiene indice para etiquetar cada elemento y el dataframe es similar a una tabla, con filas y columnas etiquetadas. Y el dataframe es más fácil de leer."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23,11 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -42,10 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_valores = [2, 9, 21, 32, 46, 37, 1]\n",
+    "lista_indices = [\"lunes\", \"martes\", \"miercoles\", \"jueves\", \"viernes\", \"sabado\", \"domingo\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +66,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lunes': 2,\n",
+       " 'martes': 9,\n",
+       " 'miercoles': 21,\n",
+       " 'jueves': 32,\n",
+       " 'viernes': 46,\n",
+       " 'sabado': 37,\n",
+       " 'domingo': 1}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_pd = pd.Series(lista_valores, index= lista_indices)\n",
+    "dicc = { indice: valor for indice, valor in zip(lista_indices, lista_valores) \n",
+    "        }\n",
+    "dicc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lunes         2\n",
+       "martes        9\n",
+       "miercoles    21\n",
+       "jueves       32\n",
+       "viernes      46\n",
+       "sabado       37\n",
+       "domingo       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_dicc = pd.Series(dicc)\n",
+    "serie_dicc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,10 +139,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['lunes', 'martes', 'miercoles', 'jueves', 'viernes', 'sabado',\n",
+      "       'domingo'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  9 21 32 46 37  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lunes    2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc[['lunes']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lunes         2\n",
+      "martes        9\n",
+      "miercoles    21\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc[['lunes', 'martes', 'miercoles']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lunes      2\n",
+      "domingo    1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(serie_dicc[['lunes', 'domingo']])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,6 +303,445 @@
     "- Usando el iloc, extrae la información de la India. Devuelve todas las columnas.\n",
     "- Usando el iloc, extrae todas las columnas de los países que estén en posición impar. La primera que nos tendría que salir es Japón y la última Corea del Norte.\n",
     "- Utilizando el código del ejercicio anterior, selecciona únicamente las columnas \"Oro\", \"Plata\" y \"Bronce\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[79, 58, 65],\n",
+       "       [62, 70, 42],\n",
+       "       [37, 14, 33],\n",
+       "       [50, 35, 24]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = np.random.randint(1, 100, size=(4 ,3))\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>España</th>\n",
+       "      <th>Francia</th>\n",
+       "      <th>Italia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79</td>\n",
+       "      <td>58</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>62</td>\n",
+       "      <td>70</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>14</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>35</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   España  Francia  Italia\n",
+       "0      79       58      65\n",
+       "1      62       70      42\n",
+       "2      37       14      33\n",
+       "3      50       35      24"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(array, columns=['España', 'Francia', 'Italia'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>País</th>\n",
+       "      <th>Oro</th>\n",
+       "      <th>Plata</th>\n",
+       "      <th>Bronce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1473</td>\n",
+       "      <td>994</td>\n",
+       "      <td>720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Japón</td>\n",
+       "      <td>1032</td>\n",
+       "      <td>1037</td>\n",
+       "      <td>985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Corea del Sur</td>\n",
+       "      <td>745</td>\n",
+       "      <td>663</td>\n",
+       "      <td>827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Irán</td>\n",
+       "      <td>179</td>\n",
+       "      <td>181</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Kazajistán</td>\n",
+       "      <td>155</td>\n",
+       "      <td>158</td>\n",
+       "      <td>224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>India</td>\n",
+       "      <td>154</td>\n",
+       "      <td>202</td>\n",
+       "      <td>315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Tailandia</td>\n",
+       "      <td>132</td>\n",
+       "      <td>175</td>\n",
+       "      <td>278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>112</td>\n",
+       "      <td>131</td>\n",
+       "      <td>240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>China Taipéi</td>\n",
+       "      <td>99</td>\n",
+       "      <td>144</td>\n",
+       "      <td>276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Corea del Norte</td>\n",
+       "      <td>91</td>\n",
+       "      <td>120</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0             País   Oro  Plata  Bronce\n",
+       "0           1            China  1473    994     720\n",
+       "1           2            Japón  1032   1037     985\n",
+       "2           3    Corea del Sur   745    663     827\n",
+       "3           4             Irán   179    181     197\n",
+       "4           5       Kazajistán   155    158     224\n",
+       "5           6            India   154    202     315\n",
+       "6           7        Tailandia   132    175     278\n",
+       "7           8        Indonesia   112    131     240\n",
+       "8           9     China Taipéi    99    144     276\n",
+       "9          10  Corea del Norte    91    120     235"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_medallas = pd.read_csv('medallas.csv')\n",
+    "df_medallas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>País</th>\n",
+       "      <th>Oro</th>\n",
+       "      <th>Plata</th>\n",
+       "      <th>Bronce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Tailandia</td>\n",
+       "      <td>132</td>\n",
+       "      <td>175</td>\n",
+       "      <td>278</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       País  Oro  Plata  Bronce\n",
+       "6           7  Tailandia  132    175     278"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fila_tailandia = df_medallas.loc[df_medallas['País']=='Tailandia']\n",
+    "fila_tailandia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>País</th>\n",
+       "      <th>Oro</th>\n",
+       "      <th>Plata</th>\n",
+       "      <th>Bronce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1473</td>\n",
+       "      <td>994</td>\n",
+       "      <td>720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Irán</td>\n",
+       "      <td>179</td>\n",
+       "      <td>181</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   País   Oro  Plata  Bronce\n",
+       "0           1  China  1473    994     720\n",
+       "3           4   Irán   179    181     197"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fila_tailandia = df_medallas.loc[df_medallas['País'].isin(['China', 'Irán'])]\n",
+    "fila_tailandia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Oro</th>\n",
+       "      <th>Plata</th>\n",
+       "      <th>Bronce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1473</td>\n",
+       "      <td>994</td>\n",
+       "      <td>720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>179</td>\n",
+       "      <td>181</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Oro  Plata  Bronce\n",
+       "0  1473    994     720\n",
+       "3   179    181     197"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fila_tailandia1 = df_medallas.loc[df_medallas['País'].isin(['China', 'Irán']),['Oro', 'Plata', 'Bronce']]\n",
+    "fila_tailandia1"
    ]
   },
   {
@@ -140,8 +772,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
