--- a/Lecciones/Leccion4_modulo03_Union.ipynb
+++ b/Lecciones/Leccion4_modulo03_Union.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -798,14 +798,14 @@
        "      <th></th>\n",
        "      <th>unnamed0</th>\n",
        "      <th>country</th>\n",
-       "      <th>density\\rp/km2</th>\n",
+       "      <th>density\\rp</th>\n",
        "      <th>abbreviation</th>\n",
        "      <th>agriculturalland</th>\n",
-       "      <th>landareakm2</th>\n",
+       "      <th>landarea</th>\n",
        "      <th>armedforcessize</th>\n",
        "      <th>birthrate</th>\n",
        "      <th>callingcode</th>\n",
-       "      <th>capital/majorcity</th>\n",
+       "      <th>capitalmajorcity</th>\n",
        "      <th>...</th>\n",
        "      <th>officiallanguage</th>\n",
        "      <th>outofpockethealthexpenditure</th>\n",
@@ -874,13 +874,13 @@
        "</div>"
       ],
       "text/plain": [
-       "   unnamed0      country density\\rp/km2 abbreviation agriculturalland  \\\n",
-       "0         0  Afghanistan             60           AF           58.10%   \n",
-       "1         1      Albania            105           AL           43.10%   \n",
+       "   unnamed0      country density\\rp abbreviation agriculturalland landarea  \\\n",
+       "0         0  Afghanistan         60           AF           58.10%  652,230   \n",
+       "1         1      Albania        105           AL           43.10%   28,748   \n",
        "\n",
-       "  landareakm2 armedforcessize  birthrate  callingcode capital/majorcity  ...  \\\n",
-       "0     652,230         323,000      32.49         93.0             Kabul  ...   \n",
-       "1      28,748           9,000      11.78        355.0            Tirana  ...   \n",
+       "  armedforcessize  birthrate  callingcode capitalmajorcity  ...  \\\n",
+       "0         323,000      32.49         93.0            Kabul  ...   \n",
+       "1           9,000      11.78        355.0           Tirana  ...   \n",
        "\n",
        "  officiallanguage outofpockethealthexpenditure physiciansperthousand  \\\n",
        "0           Pashto                       78.40%                  0.28   \n",
@@ -897,14 +897,14 @@
        "[2 rows x 35 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lista de símbolos a eliminar de los nombres de las columnas\n",
-    "quitar_simbolos = [' ', '\\n', '(', ')', ':', '%']\n",
+    "quitar_simbolos = [' ', '\\n', '(', ')', ':', '%', 'Km2', 'km2', '/']\n",
     "\n",
     "# Convertir todos los nombres de las columnas a minúsculas\n",
     "df3.columns = [column.lower() for column in df3.columns]\n",
@@ -929,16 +929,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unnamed0</th>\n",
+       "      <th>country</th>\n",
+       "      <th>density\\rp</th>\n",
+       "      <th>abbreviation</th>\n",
+       "      <th>agriculturalland</th>\n",
+       "      <th>landarea</th>\n",
+       "      <th>armedforcessize</th>\n",
+       "      <th>birthrate</th>\n",
+       "      <th>callingcode</th>\n",
+       "      <th>capitalmajorcity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>outofpockethealthexpenditure</th>\n",
+       "      <th>physiciansperthousand</th>\n",
+       "      <th>population</th>\n",
+       "      <th>populationlaborforceparticipation</th>\n",
+       "      <th>taxrevenue</th>\n",
+       "      <th>totaltaxrate</th>\n",
+       "      <th>unemploymentrate</th>\n",
+       "      <th>urban_population</th>\n",
+       "      <th>latitud</th>\n",
+       "      <th>longitud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>3</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>48.20%</td>\n",
+       "      <td>7,741,220</td>\n",
+       "      <td>58,000</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Canberra</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.60%</td>\n",
+       "      <td>3.68</td>\n",
+       "      <td>25,766,605</td>\n",
+       "      <td>65.50%</td>\n",
+       "      <td>23.00%</td>\n",
+       "      <td>47.40%</td>\n",
+       "      <td>5.27%</td>\n",
+       "      <td>21,844,756</td>\n",
+       "      <td>('-25.274398 '</td>\n",
+       "      <td>'133.775136')</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   unnamed0    country density\\rp abbreviation agriculturalland   landarea  \\\n",
+       "8         8  Australia          3           AU           48.20%  7,741,220   \n",
+       "\n",
+       "  armedforcessize  birthrate  callingcode capitalmajorcity  ...  \\\n",
+       "8          58,000       12.6         61.0         Canberra  ...   \n",
+       "\n",
+       "  outofpockethealthexpenditure physiciansperthousand  population  \\\n",
+       "8                       19.60%                  3.68  25,766,605   \n",
+       "\n",
+       "  populationlaborforceparticipation  taxrevenue totaltaxrate unemploymentrate  \\\n",
+       "8                            65.50%      23.00%       47.40%            5.27%   \n",
+       "\n",
+       "  urban_population         latitud        longitud  \n",
+       "8       21,844,756  ('-25.274398 '   '133.775136')  \n",
+       "\n",
+       "[1 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Divide la columna 'coordinates' en dos nuevas columnas 'latitud' y 'longitud'\n",
+    "# Utiliza el delimitador ',' para la división y expande el resultado en dos columnas\n",
+    "df3[['latitud', 'longitud']] = df3['coordinates'].str.split(',', expand=True)\n",
+    "\n",
+    "# Muestra las primeras 2 filas del DataFrame 'df_copy' para verificar los cambios\n",
+    "df3.head(2)\n",
+    "\n",
+    "# Elimina la columna 'coordinates' del DataFrame 'df_copy'\n",
+    "# 'axis=1' indica que se eliminará una columna y 'inplace=True' realiza el cambio directamente en 'df_copy'\n",
+    "df3.drop('coordinates', axis=1, inplace=True)\n",
+    "\n",
+    "# Muestra una fila aleatoria del DataFrame 'df_copy' para verificar los cambios\n",
+    "df3.sample(1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. **Eliminar caracteres especiales de las columnas:**\n",
+    "4. **Eliminar caracteres especiales de los valores de las columnas:**\n",
     "   - Elimina `%` de las columnas: `unemployment_rate`, `total_tax_rate`, `tax_revenue`, `population_labor_force_participation`, `out_of_pocket_health_expenditure`, `gross_tertiary_education_enrollment`, `gross_primary_education_enrollment`, `forested_area`, `cpi_change`, `agricultural_land`.\n",
     "   - Elimina `$` de las columnas: `gasoline_price`, `gdp`, `minimum_wage`."
    ]
