--- a/Lecciones/Leccion5_modulo03_GroupBy_Apply.ipynb
+++ b/Lecciones/Leccion5_modulo03_GroupBy_Apply.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -47,27 +47,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Density\\r\\n(P/Km2)</th>\n",
-       "      <th>Abbreviation</th>\n",
-       "      <th>Agricultural Land( %)</th>\n",
-       "      <th>Land Area(Km2)</th>\n",
-       "      <th>Armed Forces size</th>\n",
-       "      <th>Birth Rate</th>\n",
-       "      <th>Calling Code</th>\n",
-       "      <th>Capital/Major City</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Out of pocket health expenditure</th>\n",
-       "      <th>Physicians per thousand</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Population: Labor force participation (%)</th>\n",
-       "      <th>Tax revenue (%)</th>\n",
-       "      <th>Total tax rate</th>\n",
-       "      <th>Unemployment rate</th>\n",
-       "      <th>Urban_population</th>\n",
+       "      <th>unnamed0</th>\n",
        "      <th>country</th>\n",
-       "      <th>coordinates</th>\n",
+       "      <th>density\\r\\np</th>\n",
+       "      <th>abbreviation</th>\n",
+       "      <th>agriculturalland</th>\n",
+       "      <th>landarea</th>\n",
+       "      <th>armedforcessize</th>\n",
+       "      <th>birthrate</th>\n",
+       "      <th>callingcode</th>\n",
+       "      <th>capitalmajorcity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>outofpockethealthexpenditure</th>\n",
+       "      <th>physiciansperthousand</th>\n",
+       "      <th>population</th>\n",
+       "      <th>populationlaborforceparticipation</th>\n",
+       "      <th>taxrevenue</th>\n",
+       "      <th>totaltaxrate</th>\n",
+       "      <th>unemploymentrate</th>\n",
+       "      <th>urban_population</th>\n",
+       "      <th>latitud</th>\n",
+       "      <th>longitud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -77,23 +77,23 @@
        "      <td>Afghanistan</td>\n",
        "      <td>60</td>\n",
        "      <td>AF</td>\n",
-       "      <td>58.10%</td>\n",
+       "      <td>58.1</td>\n",
        "      <td>652,230</td>\n",
        "      <td>323,000</td>\n",
        "      <td>32.49</td>\n",
        "      <td>93.0</td>\n",
        "      <td>Kabul</td>\n",
        "      <td>...</td>\n",
-       "      <td>78.40%</td>\n",
+       "      <td>78.4</td>\n",
        "      <td>0.28</td>\n",
        "      <td>38,041,754</td>\n",
-       "      <td>48.90%</td>\n",
-       "      <td>9.30%</td>\n",
-       "      <td>71.40%</td>\n",
-       "      <td>11.12%</td>\n",
+       "      <td>48.9</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>71.4</td>\n",
+       "      <td>11.12</td>\n",
        "      <td>9,797,273</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>('33.93911 ', '67.709953')</td>\n",
+       "      <td>('33.93911 '</td>\n",
+       "      <td>'67.709953')</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -101,23 +101,23 @@
        "      <td>Albania</td>\n",
        "      <td>105</td>\n",
        "      <td>AL</td>\n",
-       "      <td>43.10%</td>\n",
+       "      <td>43.1</td>\n",
        "      <td>28,748</td>\n",
        "      <td>9,000</td>\n",
        "      <td>11.78</td>\n",
        "      <td>355.0</td>\n",
        "      <td>Tirana</td>\n",
        "      <td>...</td>\n",
-       "      <td>56.90%</td>\n",
+       "      <td>56.9</td>\n",
        "      <td>1.20</td>\n",
        "      <td>2,854,191</td>\n",
-       "      <td>55.70%</td>\n",
-       "      <td>18.60%</td>\n",
-       "      <td>36.60%</td>\n",
-       "      <td>12.33%</td>\n",
+       "      <td>55.7</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>12.33</td>\n",
        "      <td>1,747,593</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>('41.153332 ', '20.168331')</td>\n",
+       "      <td>('41.153332 '</td>\n",
+       "      <td>'20.168331')</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -125,23 +125,23 @@
        "      <td>Algeria</td>\n",
        "      <td>18</td>\n",
        "      <td>DZ</td>\n",
-       "      <td>17.40%</td>\n",
+       "      <td>17.4</td>\n",
        "      <td>2,381,741</td>\n",
        "      <td>317,000</td>\n",
        "      <td>24.28</td>\n",
        "      <td>213.0</td>\n",
        "      <td>Algiers</td>\n",
        "      <td>...</td>\n",
-       "      <td>28.10%</td>\n",
+       "      <td>28.1</td>\n",
        "      <td>1.72</td>\n",
        "      <td>43,053,054</td>\n",
-       "      <td>41.20%</td>\n",
-       "      <td>37.20%</td>\n",
-       "      <td>66.10%</td>\n",
-       "      <td>11.70%</td>\n",
+       "      <td>41.2</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>66.1</td>\n",
+       "      <td>11.70</td>\n",
        "      <td>31,510,100</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>('28.033886 ', '1.659626')</td>\n",
+       "      <td>('28.033886 '</td>\n",
+       "      <td>'1.659626')</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -149,14 +149,14 @@
        "      <td>Andorra</td>\n",
        "      <td>164</td>\n",
        "      <td>AD</td>\n",
-       "      <td>40.00%</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>468</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.20</td>\n",
        "      <td>376.0</td>\n",
        "      <td>Andorra la Vella</td>\n",
        "      <td>...</td>\n",
-       "      <td>36.40%</td>\n",
+       "      <td>36.4</td>\n",
        "      <td>3.33</td>\n",
        "      <td>77,142</td>\n",
        "      <td>NaN</td>\n",
@@ -164,8 +164,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>67,873</td>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>('42.506285 ', '1.521801')</td>\n",
+       "      <td>('42.506285 '</td>\n",
+       "      <td>'1.521801')</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -173,23 +173,23 @@
        "      <td>Angola</td>\n",
        "      <td>26</td>\n",
        "      <td>AO</td>\n",
-       "      <td>47.50%</td>\n",
+       "      <td>47.5</td>\n",
        "      <td>1,246,700</td>\n",
        "      <td>117,000</td>\n",
        "      <td>40.73</td>\n",
        "      <td>244.0</td>\n",
        "      <td>Luanda</td>\n",
        "      <td>...</td>\n",
-       "      <td>33.40%</td>\n",
+       "      <td>33.4</td>\n",
        "      <td>0.21</td>\n",
        "      <td>31,825,295</td>\n",
-       "      <td>77.50%</td>\n",
-       "      <td>9.20%</td>\n",
-       "      <td>49.10%</td>\n",
-       "      <td>6.89%</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>49.1</td>\n",
+       "      <td>6.89</td>\n",
        "      <td>21,061,025</td>\n",
-       "      <td>Angola</td>\n",
-       "      <td>('-11.202692 ', '17.873887')</td>\n",
+       "      <td>('-11.202692 '</td>\n",
+       "      <td>'17.873887')</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -197,93 +197,96 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0      Country Density\\r\\n(P/Km2) Abbreviation  \\\n",
-       "0           0  Afghanistan                 60           AF   \n",
-       "1           1      Albania                105           AL   \n",
-       "2           2      Algeria                 18           DZ   \n",
-       "3           3      Andorra                164           AD   \n",
-       "4           4       Angola                 26           AO   \n",
+       "   unnamed0      country density\\r\\np abbreviation  agriculturalland  \\\n",
+       "0         0  Afghanistan           60           AF              58.1   \n",
+       "1         1      Albania          105           AL              43.1   \n",
+       "2         2      Algeria           18           DZ              17.4   \n",
+       "3         3      Andorra          164           AD              40.0   \n",
+       "4         4       Angola           26           AO              47.5   \n",
        "\n",
-       "  Agricultural Land( %) Land Area(Km2) Armed Forces size  Birth Rate  \\\n",
-       "0                58.10%        652,230           323,000       32.49   \n",
-       "1                43.10%         28,748             9,000       11.78   \n",
-       "2                17.40%      2,381,741           317,000       24.28   \n",
-       "3                40.00%            468               NaN        7.20   \n",
-       "4                47.50%      1,246,700           117,000       40.73   \n",
+       "    landarea armedforcessize  birthrate  callingcode  capitalmajorcity  ...  \\\n",
+       "0    652,230         323,000      32.49         93.0             Kabul  ...   \n",
+       "1     28,748           9,000      11.78        355.0            Tirana  ...   \n",
+       "2  2,381,741         317,000      24.28        213.0           Algiers  ...   \n",
+       "3        468             NaN       7.20        376.0  Andorra la Vella  ...   \n",
+       "4  1,246,700         117,000      40.73        244.0            Luanda  ...   \n",
        "\n",
-       "   Calling Code Capital/Major City  ... Out of pocket health expenditure  \\\n",
-       "0          93.0              Kabul  ...                           78.40%   \n",
-       "1         355.0             Tirana  ...                           56.90%   \n",
-       "2         213.0            Algiers  ...                           28.10%   \n",
-       "3         376.0   Andorra la Vella  ...                           36.40%   \n",
-       "4         244.0             Luanda  ...                           33.40%   \n",
+       "  outofpockethealthexpenditure physiciansperthousand  population  \\\n",
+       "0                         78.4                  0.28  38,041,754   \n",
+       "1                         56.9                  1.20   2,854,191   \n",
+       "2                         28.1                  1.72  43,053,054   \n",
+       "3                         36.4                  3.33      77,142   \n",
+       "4                         33.4                  0.21  31,825,295   \n",
        "\n",
-       "  Physicians per thousand  Population  \\\n",
-       "0                    0.28  38,041,754   \n",
-       "1                    1.20   2,854,191   \n",
-       "2                    1.72  43,053,054   \n",
-       "3                    3.33      77,142   \n",
-       "4                    0.21  31,825,295   \n",
+       "  populationlaborforceparticipation  taxrevenue  totaltaxrate  \\\n",
+       "0                              48.9         9.3          71.4   \n",
+       "1                              55.7        18.6          36.6   \n",
+       "2                              41.2        37.2          66.1   \n",
+       "3                               NaN         NaN           NaN   \n",
+       "4                              77.5         9.2          49.1   \n",
        "\n",
-       "  Population: Labor force participation (%)  Tax revenue (%) Total tax rate  \\\n",
-       "0                                    48.90%            9.30%         71.40%   \n",
-       "1                                    55.70%           18.60%         36.60%   \n",
-       "2                                    41.20%           37.20%         66.10%   \n",
-       "3                                       NaN              NaN            NaN   \n",
-       "4                                    77.50%            9.20%         49.10%   \n",
-       "\n",
-       "  Unemployment rate Urban_population      country  \\\n",
-       "0            11.12%        9,797,273  Afghanistan   \n",
-       "1            12.33%        1,747,593      Albania   \n",
-       "2            11.70%       31,510,100      Algeria   \n",
-       "3               NaN           67,873      Andorra   \n",
-       "4             6.89%       21,061,025       Angola   \n",
-       "\n",
-       "                    coordinates  \n",
-       "0    ('33.93911 ', '67.709953')  \n",
-       "1   ('41.153332 ', '20.168331')  \n",
-       "2    ('28.033886 ', '1.659626')  \n",
-       "3    ('42.506285 ', '1.521801')  \n",
-       "4  ('-11.202692 ', '17.873887')  \n",
+       "   unemploymentrate urban_population         latitud       longitud  \n",
+       "0             11.12        9,797,273    ('33.93911 '   '67.709953')  \n",
+       "1             12.33        1,747,593   ('41.153332 '   '20.168331')  \n",
+       "2             11.70       31,510,100   ('28.033886 '    '1.659626')  \n",
+       "3               NaN           67,873   ('42.506285 '    '1.521801')  \n",
+       "4              6.89       21,061,025  ('-11.202692 '   '17.873887')  \n",
        "\n",
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"World-Data-Unidas.csv\")\n",
+    "df = pd.read_csv(\"World-Data-Unidas-Limpio.csv\")\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['unnamed0', 'country', 'density\\r\\np', 'abbreviation',\n",
+       "       'agriculturalland', 'landarea', 'armedforcessize', 'birthrate',\n",
+       "       'callingcode', 'capitalmajorcity', 'co2-emissions', 'cpi', 'cpichange',\n",
+       "       'currency-code', 'fertilityrate', 'forestedarea', 'gasolineprice',\n",
+       "       'gdp', 'grossprimaryeducationenrollment',\n",
+       "       'grosstertiaryeducationenrollment', 'infantmortality', 'largestcity',\n",
+       "       'lifeexpectancy', 'maternalmortalityratio', 'minimumwage',\n",
+       "       'officiallanguage', 'outofpockethealthexpenditure',\n",
+       "       'physiciansperthousand', 'population',\n",
+       "       'populationlaborforceparticipation', 'taxrevenue', 'totaltaxrate',\n",
+       "       'unemploymentrate', 'urban_population', 'latitud', 'longitud'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df= df.rename (columns= {'Land Area(Km2)':'land_area', 'Armed Forces size':'armed_forces_siz', 'Co2-Emissions':'co2-emissions', 'GDP' : 'gdp', 'Population' : 'population', 'Urban_population' : 'urban_population', 'latitude', 'longitude', 'density', 'cpi'})"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnas_convertir = ['land_area', 'armed_forces_siz', 'co2-emissions', 'gdp', 'population', 'urban_population', 'latitude', 'longitude', 'density', 'cpi']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convertir_a_numero ()"
+    "columnas = ['landarea', 'armedforcessize','co2-emissions', 'gdp', 'population',\n",
+    "       'urban_population', 'latitud', 'longitud', 'density\\r\\np', 'cpi']\n",
+    "\n",
+    "for columna in columnas:\n",
+    "        df[columna] = df[columna].apply(lambda x: pd.to_numeric(x, errors='coerce'))"
    ]
   },
   {
