--- a/Repaso/promo-H-DAmodulo03-Repaso-Fernanda_y_Mabel.ipynb
+++ b/Repaso/promo-H-DAmodulo03-Repaso-Fernanda_y_Mabel.ipynb
@@ -839,6 +839,16 @@
     "crew_column = df.loc[:, \"crew\"]\n",
     "crew_column"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crew_column = df.loc[:, \"payloads\"]\n",
+    "crew_column"
+   ]
   }
  ],
  "metadata": {
