Ejercicio 10 y limpieza git

--- a/Lecciones/Leccion9_modulo03_estadistica_inferencial.ipynb
+++ b/Lecciones/Leccion9_modulo03_estadistica_inferencial.ipynb
@@ -11,7 +11,9 @@
     "from sklearn.impute import SimpleImputer\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import norm\n"
+    "from scipy.stats import norm\n",
+    "\n",
+    "\n"
    ]
   },
   {
