Subiendo pairs de ETL I y II

--- a/Lecciones/Lecciones10_modulo03_A.B-Testing.ipynb
+++ b/Lecciones/Lecciones10_modulo03_A.B-Testing.ipynb
@@ -34,11 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', None)"
+    "# Ponemos este código para que se vean el máximo de las filas \n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -428,6 +430,7 @@
     }
    ],
    "source": [
+    "# Creamos un bucle for para sacar los valores únicos de cada columna\n",
     "for column in df.columns:\n",
     "        print(f\"Columna: {column}\")\n",
     "        print(df[column].unique())\n",
@@ -458,6 +461,7 @@
     }
    ],
    "source": [
+    "# Buscamos si hay algún nulo en el DataFrame \n",
     "nulos = df.isnull().sum() \n",
     "print(\"\\nConteo de valores nulos por columna:\") \n",
     "print(nulos) "
@@ -564,6 +568,7 @@
     }
    ],
    "source": [
+    "# Imprimimos sólo 2 filas para ver si ha resultado el cambio \n",
     "df.head(2)"
    ]
   },
@@ -609,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +627,7 @@
     }
    ],
    "source": [
-    "# Función para calcular la tasa de conversión\n",
+    "# Creamos una función\n",
     "def calcular_tasa_conversion(grupo):\n",
     "  \"\"\"\n",
     "  Calcula la tasa de conversión para un grupo específico.\n",
@@ -633,10 +638,19 @@
     "  Returns:\n",
     "    La tasa de conversión como un porcentaje.\n",
     "  \"\"\"\n",
+    "  # Filtra el DataFrame para obtener solo el grupo especificado\n",
     "  df_grupo = df[df[\"test group\"] == grupo]\n",
+    "\n",
+    "  # Cuenta el número de conversiones en el grupo filtrado\n",
     "  conversiones = df_grupo[\"converted\"].sum()\n",
+    "\n",
+    "  # Suma el número total de usuarios en el grupo filtrado\n",
     "  total_usuarios = df_grupo[\"total ads\"].sum()\n",
+    "\n",
+    "  # Calcula la tasa de conversión como porcentaje\n",
     "  tasa_conversion = (conversiones / total_usuarios) * 100\n",
+    "\n",
+    "  # Devuelve la tasa de conversión calculada\n",
     "  return tasa_conversion\n",
     "\n",
     "# Tasa de conversión para el grupo \"ad\"\n",
@@ -645,7 +659,7 @@
     "\n",
     "# Tasa de conversión para el grupo \"psa\"\n",
     "tasa_conversion_psa = calcular_tasa_conversion(\"psa\")\n",
-    "print(f\"Tasa de conversión para el grupo 'psa': {tasa_conversion_psa:.2f}%\")\n"
+    "print(f\"Tasa de conversión para el grupo 'psa': {tasa_conversion_psa:.2f}%\")"
    ]
   },
   {
@@ -658,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -675,12 +689,15 @@
     }
    ],
    "source": [
+    "# Suponiendo que el DataFrame se llama \"df\"\n",
     "contingency_table = pd.crosstab(df[\"test group\"], df[\"converted\"])\n",
+    "# Crea una tabla de contingencia para mostrar la distribución de conversiones por grupo\n",
     "print(contingency_table)\n",
     "\n",
     "chi2_stat, p_value, dof, expected = chi2_contingency(contingency_table.values)\n",
-    "print(f\"Chi-squared statistic: {chi2_stat:.2f}\")\n",
-    "print(f\"p-value: {p_value:.4f}\")"
+    "# Calcula el chi-cuadrado, p-valor, grados de libertad y valores esperados\n",
+    "print(f\"Chi-squared statistic: {chi2_stat:.2f}\")  # Imprime el estadístico chi-cuadrado\n",
+    "print(f\"p-value: {p_value:.4f}\")  # Imprime el p-valor\n"
    ]
   },
   {
